# opengles-workspace

./: CMakeLists.txt  main.cpp
include/: game_logic.hpp  input.hpp  renderer.hpp  shape.hpp
src/: game_logic.cpp  glfw_application.cpp  input.cpp  renderer.cpp  shape.cpp
